# multiobjecttracker

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindYamlCpp.cmake
include/ObjectTracker/: AbstractTracker.h  AbstractTrackerRst.h  ObjectTracker.h  TrackerConfig.h
include/ObjectTracker/model/: BayesTrackingModel.h  Model.h
include/ObjectTracker/trackers/: ClassifiedRegion3DTracker.h  PolygonalPatch3DTracker.h  PositionTracker.h
include/ObjectTracker/util/: Utilities.h
src/: ObjectTracker.cpp  main.cpp
src/models/: BayesTrackingModel.cpp
src/trackers/: ClassifiedRegion3DTracker.cpp  PolygonalPatch3DTracker.cpp  PositionTracker.cpp
src/util/: Utilities.cpp
