cmake_minimum_required(VERSION 2.8)
INCLUDE(FindPkgConfig)
INCLUDE(UsePkgConfig)

# --- general project setup ---
PROJECT("ObjectTracker")
SET(VERSION_MAJOR "1")
SET(VERSION_MINOR "0")
SET(VERSION_REVISION "0")
SET(VERSION_SHORT "${VERSION_MAJOR}.${VERSION_MINOR}")
SET(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_REVISION}")

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(BINDIR "${PREFIX}/bin")
SET(INCLUDEDIR "${PREFIX}/include")
SET(MANDIR "${PREFIX}/man")
SET(LIBDIR "${PREFIX}/lib/")
SET(DATADIR "${PREFIX}/share/${PACKET}")

SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)

# --- c++ standard ---
set(CMAKE_CXX_STANDARD 11) # This onl works in cmake > 3.0
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

# --- dependencies ---

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules)

FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES(BEFORE SYSTEM  ${Eigen3_INCLUDE_DIRS})
LINK_DIRECTORIES(${Eigen3_LIBRARY_DIRS})

#rsc
FIND_PACKAGE(RSC 0.12 REQUIRED)
INCLUDE_DIRECTORIES({RSC_INCLUDE_DIRS})
LINK_DIRECTORIES(${RSC_LIBRARY_DIRS})
MESSAGE(STATUS "RSC version: ${RSC_VERSION}")

#rsb
FIND_PACKAGE(RSB 0.12 REQUIRED)
INCLUDE_DIRECTORIES(${RSB_INCLUDE_DIRS})
LINK_DIRECTORIES(${RSB_LIBRARY_DIRS})
MESSAGE(STATUS "RSB version: ${RSB_VERSION}")

FIND_PACKAGE(RST 0.12 COMPONENTS sandbox REQUIRED)
INCLUDE_DIRECTORIES(${RST_INCLUDE_DIRS})
LINK_DIRECTORIES(${RST_LIBRARY_DIRS})
ADD_DEFINITIONS(${RST_CFLAGS})
MESSAGE(STATUS "RST version: ${RST_VERSION}")

#boost
FIND_PACKAGE(Boost REQUIRED COMPONENTS thread system)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)

#bayes_tracking
FIND_PACKAGE(bayes_tracking REQUIRED)
INCLUDE_DIRECTORIES(${bayes_tracking_INCLUDE_DIRS})

#bayes_tracking
FIND_PACKAGE(YamlCpp REQUIRED)
INCLUDE_DIRECTORIES(${YAMLCPP_INCLUDE_DIRS})

# --- build instructions ---
# --- generate executable
INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_BINARY_DIR})
ADD_EXECUTABLE(${PROJECT_NAME} 
    src/main.cpp
    src/ObjectTracker.cpp
    src/util/Utilities.cpp
    src/models/BayesTrackingModel.cpp
    src/trackers/ClassifiedRegion3DTracker.cpp
    src/trackers/PositionTracker.cpp
)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${RSB_LIBRARIES} ${RST_LIBRARIES} ${RSC_LIBRARIES} ${bayes_tracking_LIBRARIES} ${YAMLCPP_LIBRARIES})

# --- install target
INSTALL(TARGETS ${PROJECT_NAME}
        RUNTIME DESTINATION ${BINDIR})
INSTALL(DIRECTORY include DESTINATION ${INCLUDEDIR})

